--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,8 @@ exclude = ['.idea']
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+simd = []
+
 [dependencies]
 imgref = '^1.9.2'
